app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require jquery.mmenu
 *= require font-awesome
 */

@import "bootstrap-sprockets";
@import "bootstrap";

$h1-font: "brandon-grotesque", sans-serif;
$body-font: "garamond-premier-pro-display", sans-serif;
$gold: #D1A66C;
$blackish: #565656;
$grey: #F7F7F7;
$lightgrey: #949DA3;

.wf-loading {        
  /* styles to use when web fonts are loading */  
  opacity: 0;
}  

.wf-active {        
  /* styles to use when web fonts are active */  
  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
       -moz-animation: fadein 1s; /* Firefox < 16 */
        -ms-animation: fadein 1s; /* Internet Explorer */
         -o-animation: fadein 1s; /* Opera < 12.1 */
            animation: fadein 1s;
}   


@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Internet Explorer */
@-ms-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Opera < 12.1 */
@-o-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
	padding-left: 30px !important;
	padding-right: 30px !important;
}

.container {
	width: 99% !important;
}

.page-container {
	position: relative;
	min-height: 100%;
}

html, 
body {
	margin: 0;
	padding: 0;
	height: 100%;
}

body {
	font-family: $body-font;
	color: $blackish;
	font-size: 1.5em;
	letter-spacing: .1em;
}

img {
	width: 100%;
	height: auto;
}

a, a:hover, a:visited {
	color: $gold;
	background: none;
}

a:hover {
	text-decoration: underline;
}

.row {
	margin: 4em;
}

a.btn {
	text-transform: uppercase;
	font-family: $h1-font;
	letter-spacing: .2em;
	font-size: 1.15em;
	border: 1px solid $gold;
	padding: 1.5em 1.75em;

	-webkit-border-radius: 0 !important;
  -moz-border-radius: 0 !important;
  border-radius: 0 !important;

  transition: all .5s;
  outline: none !important;
}

a.btn:hover {
  background-color: $gold;
  color: white;
}

.header {
	text-align: center;
	margin: 3em auto;
	position: relative;

	.logo {
		max-width: 363px;
	}
}

.city-title {
	text-transform: uppercase;
	display: block;
	text-align: center;
	margin: 1em auto .5em;

	font-family: $h1-font;
	letter-spacing: .2em;
	font-size: 1.25em;
	color: $blackish !important;
}

a.city-title:hover {
	text-decoration: none;
}

.get-started {
	display: block;
	text-align: center;
	padding-top: .5em;
}

.menu {
	position: absolute;
	top: 0;
	left: 0;
}

.menu img {
	max-width: 50px;
}


.mm-menu {
	background: #fff !important;
}

.mm-listview > li {
	padding: 2em 0 !important;

	a, a:hover, a:visited {
		color: $gold !important;
		background: none;
		transition: all .5s;
	}

	a:hover {
		color: $blackish !important;
	}
}



.location-info {
	text-align: center;
	h3 {
		margin-bottom: 1.5em;
	}
	p {
		font-family: $body-font;
		line-height: 2em;
		padding: 0 1em;
		font-size: 1.15em;
	}
	
}

.appointment-info {
	padding: 2.5em 2.5em 1.5em;
	text-align: center;
	background-color: $grey;
	text-transform: uppercase;

	h3 {
		font-size: 1.15em;
		line-height: .75em;
		letter-spacing: .2em;
	}

	.btn {
		margin: 1.5em auto;
	}
}

.experience,
.dresses {
	overflow: hidden;

	.label-holder {
		width: 100%;
		background-color: $grey;
		display: flex;
		align-items: center;
		justify-content: flex-end;

	}

	h2 {
		padding: 2em;
		margin: 0;

		font-family: $h1-font;
		letter-spacing: .2em;
		font-size: 1.25em;
		text-transform: uppercase;
		display: inline-block;
		align-self: flex-start;

		a {
			color: $blackish;
		}

		a:hover {
			color: $gold;
			text-decoration: none;
		}
	}

	a.arrow-a {
    height: 100%;
    min-height: 70px;
    min-width: 70px;
		overflow: hidden;
		padding-top: 1em;
		margin-right: 2em;
		
		align-self: center;
	}

	.arrow-circle {
			align-self: center;
			justify-content: flex-end;
	    border-radius: 50%;

	    padding: 13px 12px 8px 12px;

	    background: $grey;
	    border: 3px solid $gold;
	    text-align: center;

	    font: 32px Arial, sans-serif;
	}

	.arrow {
		color: $gold;
	}
}



.footer {
	text-align: center;
	.sm_logo {
		max-width: 200px;
	}

	.footer-header {
		padding: 2em;
		border-bottom: 1px solid $grey;
	}
	.hours {
		max-width: 100px;
		margin: 0px auto;
		text-align: center;
		line-height: 2em;
	}

	h4 {
		color: $lightgrey;
		letter-spacing: .1em;
		margin-top: 2em;
	}

	.email {
		text-transform: uppercase;
		letter-spacing: .1em;
		font-family: $h1-font;
		font-size: 1.15em;
	}

	p {
		font-family: $h1-font;
		text-transform: uppercase;
	}

	.fa-instagram, .fa-facebook, .fa-twitter, .fa-pinterest {
    margin: 0 .5em;
    height: 30px;
    width: 30px;
    line-height: 30px;

    -moz-border-radius: 15px; /* or 50% */
    border-radius: 15px; /* or 50% */

    background-color: $lightgrey;
    color: white;
    text-align: center;
    font-size: .95em;
	}
}

#footer-bottom {
	position: absolute;
	bottom: 0;
	width:100%;
  height:352px;
  overflow: hidden;
}

.other-stores {
	margin: 0px !important;
	background-color: $grey;
	border-top: 1px solid #D0D0D0;
	border-bottom: 1px solid #D0D0D0;
	text-align: center;

	.city-title {
		color: $lightgrey !important;
	}

	div:first-child {
		border-right: 1px solid #D0D0D0;
	}

	div {
		padding: 3em 0;
	}
}

.bottom-nav {
	background-color: $grey;
	margin: 0 !important;
	padding: 4em;

	li {
		list-style-type: none;

		a {
			color: $lightgrey !important;
		}
	}
}

